# The-best-places-in-Moscow

./: .gitignore  README.md  manage.py  pyproject.toml  requiremets.txt
moscow_places/: admin.py  apps.py  models.py  services.py  urls.py  views.py
moscow_places/management/commands/: load_place.py
moscow_places/migrations/: 0001_initial.py  0002_alter_place_short_description.py  0003_alter_place_table_photo.py  0004_alter_photo_image_alter_photo_place.py  0005_alter_photo_options_photo_my_order.py  0006_alter_photo_options_rename_my_order_photo_order_and_more.py  0007_alter_place_unique_together.py
places/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
